--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -6,7 +6,7 @@ Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
+Mcu.IP3=SPI3
 Mcu.IP4=SYS
 Mcu.IP5=USART2
 Mcu.IPNb=6
@@ -14,9 +14,9 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
+Mcu.Pin2=PC10
+Mcu.Pin3=PC11
+Mcu.Pin4=PC12
 Mcu.Pin5=PE1
 Mcu.Pin6=VP_FATFS_VS_Generic
 Mcu.Pin7=VP_SYS_VS_Systick
@@ -41,20 +41,15 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_PuPd
-PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_PuPd
-PA6.GPIO_PuPd=GPIO_NOPULL
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_PuPd
-PA7.GPIO_PuPd=GPIO_NOPULL
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PE1.GPIOParameters=GPIO_Label
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
+PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE1.GPIO_Label=SD_CS
+PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -106,12 +101,11 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
-SPI1.CalculateBaudRate=250.0 KBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SPI3.CalculateBaudRate=8.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
