--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -6,21 +6,26 @@ Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI3
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP3=SPI2
+Mcu.IP4=SPI3
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PC10
-Mcu.Pin3=PC11
-Mcu.Pin4=PC12
-Mcu.Pin5=PE1
-Mcu.Pin6=VP_FATFS_VS_Generic
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin0=PC2
+Mcu.Pin1=PC3
+Mcu.Pin10=VP_FATFS_VS_Generic
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PB10
+Mcu.Pin5=PD10
+Mcu.Pin6=PC10
+Mcu.Pin7=PC11
+Mcu.Pin8=PC12
+Mcu.Pin9=PE1
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -41,12 +46,22 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=INA_CS
+PD10.Locked=true
+PD10.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE1.GPIO_Label=SD_CS
 PE1.GPIO_PuPd=GPIO_NOPULL
@@ -101,6 +116,11 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SPI2.CalculateBaudRate=8.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 SPI3.CalculateBaudRate=8.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
