--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -56,6 +56,7 @@ PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
+PC3.Locked=true
 PC3.Mode=Full_Duplex_Master
 PC3.Signal=SPI2_MOSI
 PD10.GPIOParameters=GPIO_Label
@@ -95,7 +96,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -116,14 +117,16 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-SPI2.CalculateBaudRate=8.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI2.CalculateBaudRate=62.5 KBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI3.CalculateBaudRate=8.0 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI3.CalculateBaudRate=62.5 KBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 USART2.BaudRate=9600
