SD mount,write,unmount functions

--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -13,19 +13,20 @@ Mcu.IP6=USART2
 Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC2
-Mcu.Pin1=PC3
-Mcu.Pin10=VP_FATFS_VS_Generic
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PB10
-Mcu.Pin5=PD10
-Mcu.Pin6=PC10
-Mcu.Pin7=PC11
-Mcu.Pin8=PC12
-Mcu.Pin9=PE1
-Mcu.PinsNb=12
+Mcu.Pin0=PE3
+Mcu.Pin1=PC2
+Mcu.Pin10=PE1
+Mcu.Pin11=VP_FATFS_VS_Generic
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin2=PC3
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PB10
+Mcu.Pin6=PD10
+Mcu.Pin7=PC10
+Mcu.Pin8=PC11
+Mcu.Pin9=PC12
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -68,6 +69,10 @@ PE1.GPIO_Label=SD_CS
 PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=SD_DET
+PE3.Locked=true
+PE3.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -96,7 +101,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
