--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -6,18 +6,21 @@ Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI2
-Mcu.IP4=SPI3
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP3=RTC
+Mcu.IP4=SPI2
+Mcu.IP5=SPI3
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC2
 Mcu.Pin10=PE1
 Mcu.Pin11=VP_FATFS_VS_Generic
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin12=VP_RTC_VS_RTC_Activate
+Mcu.Pin13=VP_RTC_VS_RTC_Calendar
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PC3
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -26,7 +29,7 @@ Mcu.Pin6=PD10
 Mcu.Pin7=PC10
 Mcu.Pin8=PC11
 Mcu.Pin9=PC12
-Mcu.PinsNb=13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -101,7 +104,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -122,6 +125,13 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+RTC.Date=1
+RTC.Hours=0
+RTC.IPParameters=Year,Date,WeekDay,Month,Hours,Minutes
+RTC.Minutes=0
+RTC.Month=RTC_MONTH_JANUARY
+RTC.WeekDay=RTC_WEEKDAY_MONDAY
+RTC.Year=0
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI2.CalculateBaudRate=62.5 KBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
@@ -139,6 +149,10 @@ USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
