--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -16,21 +16,22 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PA2
-Mcu.Pin10=PC12
-Mcu.Pin11=PE1
-Mcu.Pin12=VP_FATFS_VS_Generic
-Mcu.Pin13=VP_RTC_VS_RTC_Activate
-Mcu.Pin14=VP_RTC_VS_RTC_Calendar
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PC11
+Mcu.Pin11=PC12
+Mcu.Pin12=PE1
+Mcu.Pin13=VP_FATFS_VS_Generic
+Mcu.Pin14=VP_RTC_VS_RTC_Activate
+Mcu.Pin15=VP_RTC_VS_RTC_Calendar
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PB13
 Mcu.Pin4=PB15
 Mcu.Pin5=PD10
-Mcu.Pin6=PC7
-Mcu.Pin7=PC9
-Mcu.Pin8=PC10
-Mcu.Pin9=PC11
-Mcu.PinsNb=16
+Mcu.Pin6=PC6
+Mcu.Pin7=PC7
+Mcu.Pin8=PC9
+Mcu.Pin9=PC10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -63,6 +64,10 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=AMT_CS
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BME_CS
 PC7.Locked=true
