--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -7,30 +7,35 @@ Mcu.IP0=FATFS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RTC
-Mcu.IP4=SPI2
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP4=SPI1
+Mcu.IP5=SPI2
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PA2
-Mcu.Pin10=PC12
-Mcu.Pin11=PE1
-Mcu.Pin12=VP_FATFS_VS_Generic
-Mcu.Pin13=VP_RTC_VS_RTC_Activate
-Mcu.Pin14=VP_RTC_VS_RTC_Calendar
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PC7
+Mcu.Pin11=PC9
+Mcu.Pin12=PC10
+Mcu.Pin13=PC11
+Mcu.Pin14=PC12
+Mcu.Pin15=PE1
+Mcu.Pin16=VP_FATFS_VS_Generic
+Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
-Mcu.Pin3=PB13
-Mcu.Pin4=PB15
-Mcu.Pin5=PD10
-Mcu.Pin6=PC7
-Mcu.Pin7=PC9
-Mcu.Pin8=PC10
-Mcu.Pin9=PC11
-Mcu.PinsNb=16
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB13
+Mcu.Pin7=PB15
+Mcu.Pin8=PD10
+Mcu.Pin9=PC6
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -51,6 +56,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB13.Locked=true
 PB13.Mode=Simplex_Bidirectional_Master
 PB13.Signal=SPI2_SCK
@@ -63,6 +74,10 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=AMT_CS
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BME_CS
 PC7.Locked=true
@@ -112,7 +127,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -140,6 +155,11 @@ RTC.Minutes=0
 RTC.Month=RTC_MONTH_JANUARY
 RTC.WeekDay=RTC_WEEKDAY_MONDAY
 RTC.Year=0
+SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
