--- a/STM32 Stuff/STM 32 External Storage.ioc
+++ b/STM32 Stuff/STM 32 External Storage.ioc
@@ -17,24 +17,6 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PA2
-<<<<<<< HEAD
-Mcu.Pin10=PC11
-Mcu.Pin11=PC12
-Mcu.Pin12=PE1
-Mcu.Pin13=VP_FATFS_VS_Generic
-Mcu.Pin14=VP_RTC_VS_RTC_Activate
-Mcu.Pin15=VP_RTC_VS_RTC_Calendar
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin2=PA3
-Mcu.Pin3=PB13
-Mcu.Pin4=PB15
-Mcu.Pin5=PD10
-Mcu.Pin6=PC6
-Mcu.Pin7=PC7
-Mcu.Pin8=PC9
-Mcu.Pin9=PC10
-Mcu.PinsNb=17
-=======
 Mcu.Pin10=PC7
 Mcu.Pin11=PC9
 Mcu.Pin12=PC10
@@ -54,7 +36,6 @@ Mcu.Pin7=PB15
 Mcu.Pin8=PD10
 Mcu.Pin9=PC6
 Mcu.PinsNb=20
->>>>>>> main
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -146,7 +127,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FATFS_Init-FATFS-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
